--- a/FrontEnd/TP/GeoChatRoom/app/src/main/res/layout/activity_main.xml
+++ b/FrontEnd/TP/GeoChatRoom/app/src/main/res/layout/activity_main.xml
@@ -61,11 +61,10 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/chat"
+        android:layout_width="409dp"
+        android:layout_height="601dp"
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
