--- a/FrontEnd/TP/GeoChatRoom/app/src/main/res/layout/activity_main.xml
+++ b/FrontEnd/TP/GeoChatRoom/app/src/main/res/layout/activity_main.xml
@@ -63,11 +63,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat"
-        android:layout_width="409dp"
-        android:layout_height="601dp"
-        app:layout_constraintBottom_toTopOf="@+id/message"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/latitude" />
+        app:layout_constraintTop_toBottomOf="@+id/longitude" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
