TP5 - First Evolution Ex2 - BackEnd

--- a/BackEnd/TP/TP5/src/main/resources/templates/preferred-pokemon-result.html
+++ b/BackEnd/TP/TP5/src/main/resources/templates/preferred-pokemon-result.html
@@ -7,5 +7,6 @@
 <body>
     <p th:text="'Your name is close of this Pokemon :  ' + ${pokemon}" />
     <p th:text="'It has been displayed to this number of people :  ' + ${counter}" />
+    <p th:text="'Top ten pokemons are :  ' + ${pokemons}" />
 </body>
 </html>
